# microsys

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  run_cmake.bat
gdb/: commands.gdb
openocd/: microbit.cfg
ozone/: bbcmicrobit.jdebug
scripts/: run_cmake.bat  run_cmd.bat  run_gdb.bat  run_openocd.bat  source_env.bat
src/application/: display.c  display.h  main.c
src/ld/: NRF51822_QFAA_R.ld
src/microhal/: CMakeLists.txt  clock.c  clock.h  delay.c  delay.h  gpio.h  gpio_internals.h  microhal.h  nvic.c  nvic.h  register.h  timer.c  timer.h  uart.c  uart.h
src/rtos/: CMakeLists.txt
src/rtos/include/: FreeRTOSConfig.h
src/rtos/port/: port.c
src/startup/: heap.c  isr_vectors.c  isr_vectors.h  linker_symbols.h  stack.c  startup.c  startup_config.h
